sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:4: error: not found: value ecart
    if (ecart>1){
        ^AlgCombSort:5: error: not found: value ecart
      ecart = nb/1.3
      ^AlgCombSort:9: error: not found: value ecart
  while (m!=0 && ecart >1){
                 ^AlgCombSort:11: error: not found: value ecart
    while (i+ecart < getNombreValeurs()){
             ^AlgCombSort:12: error: not found: value ecart
      if (plusPetit(i+ecart,i)==true){
                      ^AlgCombSort:13: error: not found: value ecart
        echange(i,i+ecart)
                    ^